--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="hero-copy">
         <h2 data-i18n="hero_title">Happy walks. Healthy pets. Hassle-free for you.</h2>
         <p data-i18n="hero_sub">Serving Kharghar, Panvel, and Ulwe with reliable walking, grooming, and vet accompany.</p>
-        <div class="hero-cta">
+        <!-- <div class="hero-cta">
           <label for="locality" class="visually-hidden">Locality</label>
           <select id="locality" class="select">
             <option>Kharghar</option>
@@ -69,7 +69,7 @@
             <option>Ulwe</option>
           </select>
           <a class="btn" id="cta-book" data-i18n="cta_book">Book a walk</a>
-        </div>
+        </div> -->
       </div>
       <div class="hero-media">
         <img src="https://images.unsplash.com/photo-1558944351-cd1d211f9d51?q=80&w=1200&auto=format&fit=crop" alt="Owner walking a happy dog"/>
