--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <img src="https://images.unsplash.com/photo-1558944351-cd1d211f9d51?q=80&w=300&auto=format&fit=crop" alt="Petopia logo" class="logo"/>
+        <img src="" alt="Petopia logo" class="logo"/>
         <div>
           <h1 class="brand-title" data-i18n="brand">Petopia</h1>
           <p class="brand-tag" data-i18n="tagline">Complete pet care at your doorstep</p>
@@ -72,7 +72,7 @@
         </div> -->
       </div>
       <div class="hero-media">
-        <img src="https://images.unsplash.com/photo-1558944351-cd1d211f9d51?q=80&w=1200&auto=format&fit=crop" alt="Owner walking a happy dog"/>
+        <img src="image/pexels-jagheterjohann-1254140.jpg" alt="Owner walking a happy dog"/>
       </div>
     </div>
   </section>
@@ -83,17 +83,17 @@
       <h3 class="section-title" data-i18n="services_title">Services</h3>
       <div class="grid cards">
         <article class="card">
-          <img src="image/pexels-katia-miasoed-624959709-18039300" alt="Dog walking" />
+          <img src="image/pexels-katia-miasoed-624959709-18039300.jpg" alt="Dog walking" />
           <h4 data-i18n="svc_walk_title">Dog Walking</h4>
           <p data-i18n="svc_walk_text">Daily, weekly, or on-demand walks with GPS check-in and photo updates.</p>
         </article>
         <article class="card">
-          <img src="image/pexels-valeriia-harbuz-2161259-12943750" alt="Grooming" />
+          <img src="image/pexels-valeriia-harbuz-2161259-12943750.jpg" alt="Grooming" />
           <h4 data-i18n="svc_groom_title">Grooming at Home</h4>
           <p data-i18n="svc_groom_text">Bath, brush, nails, and ear cleaning at your doorstep.</p>
         </article>
         <article class="card">
-          <img src="image/pexels-jesus-trevizo-884683-2014915" alt="Vet accompany" />
+          <img src="image/pexels-jesus-trevizo-884683-2014915.jpg" alt="Vet accompany" />
           <h4 data-i18n="svc_vet_title">Vet Accompany</h4>
           <p data-i18n="svc_vet_text">We accompany your pet to the vet, manage queues, and keep you updated.</p>
         </article>
