--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
           <li>Medium Breed <strong>₹650</strong></li>
           <li>Large Breed <strong>₹800</strong></li>
         </ul>
-      <!-- </article>
-      <article class="card">
+      </article>
+      <!-- <article class="card">
         <h4>Walk + 2 Grooming Sessions / Month</h4>
         <ul class="price-list">
           <li>Small Breed <strong>₹3100</strong></li>
