--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Petopia — Complete pet care at your doorstep. Dog walking, grooming, and vet accompany in Kharghar, Panvel, and Ulwe." />
-  <meta property="og:title" content="Petopia" />
-  <meta property="og:description" content="Complete pet care at your doorstep." />
+  <meta name="description" content="Pawzy — Complete pet care at your doorstep. Dog walking, grooming, day boarding and vet accompany in Kharghar, Panvel, and Ulwe." />
+  <meta property="og:title" content="Pawzy" />
+  <meta property="og:description" content="Complete pet care at your doorstep!" />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#0ea5e9" />
-  <title>Petopia • Complete pet care at your doorstep</title>
+  <title>Pawzy • Complete pet care at your doorstep!</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -28,10 +28,10 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <img src="" alt="Petopia logo" class="logo"/>
+        <img src="image/Pawzy logo.jpg" alt="Pawzy logo" class="logo"/>
         <div>
-          <h1 class="brand-title" data-i18n="brand">Petopia</h1>
-          <p class="brand-tag" data-i18n="tagline">Complete pet care at your doorstep</p>
+          <h1 class="brand-title" data-i18n="brand">Pawzy</h1>
+          <p class="brand-tag" data-i18n="tagline">Complete pet care at your doorstep!</p>
         </div>
       </div>
       <nav class="nav">
@@ -60,7 +60,7 @@
     <div class="container hero-inner">
       <div class="hero-copy">
         <h2 data-i18n="hero_title">Happy walks. Healthy pets. Hassle-free for you.</h2>
-        <p data-i18n="hero_sub">Serving Kharghar, Panvel, and Ulwe with reliable walking, grooming, and vet accompany.</p>
+        <p data-i18n="hero_sub">Serving Kharghar, Panvel, and Ulwe with reliable walking, grooming, day boarding and vet accompany.</p>
         <!-- <div class="hero-cta">
           <label for="locality" class="visually-hidden">Locality</label>
           <select id="locality" class="select">
@@ -93,10 +93,16 @@
           <p data-i18n="svc_groom_text">Bath, brush, nails, and ear cleaning at your doorstep.</p>
         </article>
         <article class="card">
+           <img src="image/dog sleeping.jpg" alt="Day boarding" />
+           <h4 data-i18n="svc_vet_title">Day boarding</h4>
+           <p data-i18n="svc_vet_text">We provide day boarding services to your furry partner while you are away.</p>
+         </article>
+        <article class="card">
           <img src="image/pexels-jesus-trevizo-884683-2014915.jpg" alt="Vet accompany" />
           <h4 data-i18n="svc_vet_title">Vet Accompany</h4>
           <p data-i18n="svc_vet_text">We accompany your pet to the vet, manage queues, and keep you updated.</p>
         </article>
+       
       </div>
     </div>
   </section>
@@ -152,12 +158,13 @@
   <!-- Why Us -->
   <section class="section" id="why">
     <div class="container">
-      <h3 class="section-title" data-i18n="why_title">Why choose Petopia?</h3>
+      <h3 class="section-title" data-i18n="why_title">Why choose Pawzy?</h3>
       <div class="grid features">
         <div class="feature"><h4>GPS Safety Tracker</h4><p>Every dog gets a live GPS tracker so you always know they’re safe and where they are.</p></div>
+       <div class="feature"><h4>Trained/verified care taker</h4><p>A trained and verified caretaker ensuring safe, reliable, and professional care for your beloved pets.</p></div>
         <div class="feature"><h4>Season Ready</h4><p>Free raincoat in monsoon and paw-care guidance in summer.</p></div>
         <div class="feature"><h4>Clean Surroundings</h4><p>Walkers carry poop pickers and disposal bags to keep your neighborhood clean.</p></div>
-        <div class="feature"><h4>Personalized Diet Chart</h4><p>Free customized nutrition plan based on breed, age, activity and climate.</p></div>
+        <div class="feature" style="margin-bottom:20px;"><h4>Personalized Diet Chart</h4><p>Free customized nutrition plan based on breed, age, activity and climate.</p></div>
       </div>
         <div class="feature"><h4 data-i18n="why_safe">Safety-first</h4><p data-i18n="why_safe_p">Leashes, ID checks, and real-time updates.</p></div>
         <div class="feature"><h4 data-i18n="why_convenient">Convenient scheduling</h4><p data-i18n="why_convenient_p">Book in seconds, reschedule anytime.</p></div>
