--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         </article>
         <article class="card">
            <img src="image/dog sleeping.jpg" alt="Day boarding" />
-           <h4 data-i18n="svc_vet_title">Day boarding</h4>
-           <p data-i18n="svc_vet_text">We provide day boarding services to your furry partner while you are away.</p>
+           <h4 data-i18n="svc_board_title">Day boarding</h4>
+           <p data-i18n="svc_board_text">We provide day boarding services to your furry partner while you are away.</p>
          </article>
         <article class="card">
           <img src="image/pexels-jesus-trevizo-884683-2014915.jpg" alt="Vet accompany" />
