--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
             <select name="service" required>
               <option value="Walking" data-i18n="svc_walk_title">Dog Walking</option>
               <option value="Grooming" data-i18n="svc_groom_title">Grooming at Home</option>
+             <option value="Day boarding" data-i18n="svc_vet_title">Day boarding</option>
               <option value="Vet Accompany" data-i18n="svc_vet_title">Vet Accompany</option>
             </select>
           </label>
@@ -245,7 +246,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Petopia • <span data-i18n="footer_local">Kharghar • Panvel • Ulwe</span></p>
+      <p>© <span id="year"></span> Pawzy • <span data-i18n="footer_local">Kharghar • Panvel • Ulwe</span></p>
     </div>
   </footer>
 </body>
