--- a/index.html
+++ b/index.html
@@ -18,7 +18,27 @@
   <link rel="stylesheet" href="style.css" />
   <script defer src="app.js"></script>
 </head>
+ <script>
+  // When page fully loads, hide the preloader
+  window.addEventListener("load", function() {
+    document.getElementById("preloader").classList.add("hide-preloader");
+  });
+</script>
 <body>
+
+ <!-- Preloader -->
+<div id="preloader">
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <lottie-player 
+      src="https://assets9.lottiefiles.com/packages/lf20_JiO90pYf1I.json" 
+      background="transparent"  
+      speed="1"  
+      style="width:200px;height:200px;"  
+      loop  
+      autoplay>
+  </lottie-player>
+</div>
+
   <!-- Floating WhatsApp (always visible) -->
   <a id="whatsapp-float" class="btn-whatsapp" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
     <svg viewBox="0 0 32 32" aria-hidden="true"><path d="M19.11 17.18c-.29-.14-1.68-.83-1.94-.92-.26-.1-.45-.14-.64.14-.19.29-.73.92-.9 1.11-.16.19-.33.21-.62.07-.29-.14-1.2-.44-2.29-1.41-.85-.76-1.43-1.69-1.6-1.98-.17-.29-.02-.45.13-.59.13-.13.29-.33.43-.5.14-.17.19-.29.29-.48.1-.19.05-.36-.02-.5-.07-.14-.64-1.54-.88-2.11-.23-.56-.47-.49-.64-.49-.16 0-.36-.02-.55-.02s-.5.07-.76.36c-.26.29-1 1-1 2.43 0 1.43 1.02 2.81 1.17 3 .14.19 2 3.06 4.83 4.29.68.29 1.21.46 1.62.59.68.22 1.3.19 1.79.12.55-.08 1.68-.69 1.92-1.36.24-.67.24-1.25.17-1.36-.07-.11-.26-.17-.55-.31zM16.02 3.2C9.46 3.2 4.16 8.5 4.16 15.05c0 2.64.86 5.08 2.31 7.05L5.5 28.8l6.89-1.81c1.9 1.04 4.08 1.64 6.42 1.64 6.56 0 11.86-5.3 11.86-11.86S22.58 3.2 16.02 3.2z"/></svg>
