--- a/index.html
+++ b/index.html
@@ -3,6 +3,30 @@
 ============================== -->
 <!DOCTYPE html>
 <html lang="en">
+
+<style>
+  /* Full-screen preloader */
+  #preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;     /* or any color you prefer */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+
+  /* Hide animation smoothly */
+  .hide-preloader {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.6s ease;
+  }
+</style>
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
