--- a/index.html
+++ b/index.html
@@ -4,29 +4,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<style>
-  /* Full-screen preloader */
-  #preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: white;     /* or any color you prefer */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
-
-  /* Hide animation smoothly */
-  .hide-preloader {
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.6s ease;
-  }
-</style>
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -41,27 +18,45 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <script defer src="app.js"></script>
+
+   <style>
+    /* Full-screen loader */
+    #preloader {
+      position: fixed;
+      inset: 0;
+      background: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    /* Fade out */
+    .hide-preloader {
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.5s ease;
+    }
+  </style>
+
+ 
 </head>
- <script>
-  // When page fully loads, hide the preloader
-  window.addEventListener("load", function() {
-    document.getElementById("preloader").classList.add("hide-preloader");
-  });
-</script>
+
 <body>
 
  <!-- Preloader -->
-<div id="preloader">
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-  <lottie-player 
-      src="https://assets9.lottiefiles.com/packages/lf20_JiO90pYf1I.json" 
-      background="transparent"  
-      speed="1"  
-      style="width:200px;height:200px;"  
-      loop  
-      autoplay>
-  </lottie-player>
-</div>
+  <div id="preloader">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
+    <lottie-player 
+        src="assets/Yoga Dog.json"
+        background="transparent"
+        speed="1"
+        style="width:220px;height:220px;"
+        loop
+        autoplay>
+    </lottie-player>
+  </div>
 
   <!-- Floating WhatsApp (always visible) -->
   <a id="whatsapp-float" class="btn-whatsapp" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
@@ -293,5 +288,13 @@
       <p>© <span id="year"></span> Pawzy • <span data-i18n="footer_local">Kharghar • Panvel • Ulwe</span></p>
     </div>
   </footer>
+
+ <script>
+    window.addEventListener("load", () => {
+      document.getElementById("preloader").classList.add("hide-preloader");
+    });
+  </script>
+
+ 
 </body>
 </html>
