--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
   <script defer src="app.js"></script>
 
    <style>
-    /* Full-screen loader */
-    #preloader {
-      position: fixed;
-      inset: 0;
-      background: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-    }
+  #preloader {
+    position: fixed;
+    inset: 0;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    opacity: 1;
+    transition: opacity 1.2s ease; /* smoother fade */
+  }
 
-    /* Fade out */
-    .hide-preloader {
-      opacity: 0;
-      visibility: hidden;
-      transition: opacity 0.5s ease;
-    }
-  </style>
+  .hide-preloader {
+    opacity: 0;
+    visibility: hidden;
+  }
+</style>
+
 
  
 </head>
@@ -289,11 +289,13 @@
     </div>
   </footer>
 
- <script>
-    window.addEventListener("load", () => {
+<script>
+  window.addEventListener("load", () => {
+    setTimeout(() => {
       document.getElementById("preloader").classList.add("hide-preloader");
-    });
-  </script>
+    }, 1200);  // delay before fade-out begins
+  });
+</script>
 
  
 </body>
