--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="brand">
-        <img src="image/Pawzy logo.jpg" alt="Pawzy logo" class="logo"/>
+        <img src="image/Pawzy logo crop.jpg" alt="Pawzy logo" class="logo"/>
         <div>
           <h1 class="brand-title" data-i18n="brand">Pawzy</h1>
           <p class="brand-tag" data-i18n="tagline">Complete pet care at your doorstep!</p>
