--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
           <li><a href="#contact" data-i18n="nav_contact">Contact</a></li>
         </ul>
       </nav>
-      <div class="lang-switch">
+      <!-- <div class="lang-switch">
         <label for="lang" class="visually-hidden">Language</label>
         <select id="lang" aria-label="Language selector">
           <option value="en">English</option>
           <option value="hi">हिंदी</option>
           <option value="mr">मराठी</option>
         </select>
-      </div>
+      </div> -->
     </div>
   </header>
 
