--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <img src="image/Pawzy logo crop.jpg" alt="Pawzy logo" class="logo"/>
         <div>
           <h1 class="brand-title" data-i18n="brand">Pawzy</h1>
-          <p class="brand-tag" data-i18n="tagline">Complete pet care at your doorstep!</p>
+          <p class="brand-tag" data-i18n="tagline">Complete pet care at your doorstep</p>
         </div>
       </div>
       <nav class="nav">
