--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </div>
 
   <!-- Floating Dog Animation -->
-<div id="floating-dog">
+<div id="floating-dog" class="hidden-dog">
 
   <lottie-player
       src="assets/pet lovers.json"
