--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-0DGJRLKDQF"></script>
+ <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+ 
+   gtag('config', 'G-0DGJRLKDQF');
+</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Pawzy — Complete pet care at your doorstep. Dog walking, grooming, day boarding and vet accompany in Kharghar, Panvel, and Ulwe." />
