--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Pawzy — Complete pet care at your doorstep. Dog walking, grooming, day boarding and vet accompany in Kharghar, Panvel, and Ulwe." />
   <meta property="og:title" content="Pawzy" />
+  <link rel="icon" type="image/png" href="image/Pawzy logo crop.jpg">
   <meta property="og:description" content="Complete pet care at your doorstep!" />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#0ea5e9" />
