--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Pawzy — Complete pet care at your doorstep. Dog walking, grooming, day boarding and vet accompany in Kharghar, Panvel, and Ulwe." />
+  <meta name="description" content="Pawzy — Complete pet care at your doorstep. Dog walking, grooming, day boarding and vet accompany in Mumbai, Navi Mumbai and Thane." />
   <meta property="og:title" content="Pawzy" />
   <link rel="icon" type="image/png" href="image/Pawzy logo crop.jpg">
   <meta property="og:description" content="Complete pet care at your doorstep!" />
@@ -137,16 +137,8 @@
     <div class="container hero-inner">
       <div class="hero-copy">
         <h2 data-i18n="hero_title">Happy walks. Healthy pets. Hassle-free for you.</h2>
-        <p data-i18n="hero_sub">Serving Kharghar, Panvel, and Ulwe with reliable walking, grooming, day boarding and vet accompany.</p>
-        <!-- <div class="hero-cta">
-          <label for="locality" class="visually-hidden">Locality</label>
-          <select id="locality" class="select">
-            <option>Kharghar</option>
-            <option>Panvel</option>
-            <option>Ulwe</option>
-          </select>
-          <a class="btn" id="cta-book" data-i18n="cta_book">Book a walk</a>
-        </div> -->
+        <p data-i18n="hero_sub">Serving Mumbai, Navi Mumbai and Thane with reliable walking, grooming, day boarding and vet accompany.</p>
+        
       </div>
       <div class="hero-media">
         <img src="image/pexels-jagheterjohann-1254140.jpg" alt="Owner walking a happy dog"/>
@@ -257,15 +249,15 @@
       <div class="grid testimonials">
         <blockquote class="quote">
           <p data-i18n="testi_1">“Reliable and caring. My Husky actually waits by the door!”</p>
-          <cite>— Aisha, Kharghar</cite>
+          <cite>— Aisha, Kurla</cite>
         </blockquote>
         <blockquote class="quote">
           <p data-i18n="testi_2">“Grooming at home saved us so much time. Super neat.”</p>
-          <cite>— Rohan, Panvel</cite>
+          <cite>— Rohan, Nerul</cite>
         </blockquote>
         <blockquote class="quote">
           <p data-i18n="testi_3">“They handled the vet visit end-to-end. Stress-free.”</p>
-          <cite>— Meera, Ulwe</cite>
+          <cite>— Meera, Colaba</cite>
         </blockquote>
       </div>
     </div>
@@ -288,9 +280,9 @@
           <label>
             <span data-i18n="form_locality">Locality</span>
             <select name="locality" required>
-              <option>Kharghar</option>
-              <option>Panvel</option>
-              <option>Ulwe</option>
+              <option>Mumbai</option>
+              <option>Navi Mumbai</option>
+              <option>Thane</option>
             </select>
           </label>
           <label>
@@ -323,7 +315,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> Pawzy • <span data-i18n="footer_local">Kharghar • Panvel • Ulwe</span></p>
+      <p>© <span id="year"></span> Pawzy • <span data-i18n="footer_local">Mumbai • Navi Mumbai • Thane</span></p>
     </div>
   </footer>
 
