--- a/index.html
+++ b/index.html
@@ -152,7 +152,17 @@
       <h3 class="section-title" data-i18n="services_title">Services</h3>
       <div class="grid cards">
         <article class="card">
-          <img src="image/pexels-katia-miasoed-624959709-18039300.jpg" alt="Dog walking" />
+          <img 
+           src="image/dog-walking-optimized.webp"
+           srcset="
+             image/dog-walking-optimized-400.webp 400w,
+             image/dog-walking-optimized-800.webp 800w
+           "
+           sizes="(max-width: 600px) 100vw, 600px"
+           alt="Dog walking"
+           fetchpriority="high"
+         />
+
           <h4 data-i18n="svc_walk_title">Dog Walking</h4>
           <p data-i18n="svc_walk_text">Daily, weekly, or on-demand walks with GPS check-in and photo updates.</p>
         </article>
