--- a/index.html
+++ b/index.html
@@ -177,7 +177,16 @@
            <p data-i18n="svc_board_text">We provide day boarding services to your furry partner while you are away.</p>
          </article>
         <article class="card">
-          <img src="image/pexels-jesus-trevizo-884683-2014915.jpg" alt="Vet accompany" />
+          <img 
+             src="image/dog-car-optimized.webp"
+             srcset="
+               image/dog-car-optimized-400.webp 400w,
+               image/dog-car-optimized.webp 800w
+             "
+             sizes="(max-width: 600px) 100vw, 600px"
+             alt="Dog enjoying the ride"
+           />
+
           <h4 data-i18n="svc_vet_title">Vet Accompany</h4>
           <p data-i18n="svc_vet_text">We accompany your pet to the vet, manage queues, and keep you updated.</p>
         </article>
