--- a/index.html
+++ b/index.html
@@ -121,14 +121,7 @@
           <li><a href="#contact" data-i18n="nav_contact">Contact</a></li>
         </ul>
       </nav>
-      <!-- <div class="lang-switch">
-        <label for="lang" class="visually-hidden">Language</label>
-        <select id="lang" aria-label="Language selector">
-          <option value="en">English</option>
-          <option value="hi">हिंदी</option>
-          <option value="mr">मराठी</option>
-        </select>
-      </div> -->
+      
     </div>
   </header>
 
@@ -153,15 +146,14 @@
       <div class="grid cards">
         <article class="card">
           <img 
-           src="image/dog-walking-optimized.webp"
-           srcset="
-             image/dog-walking-optimized-400.webp 400w,
-             image/dog-walking-optimized-800.webp 800w
-           "
-           sizes="(max-width: 600px) 100vw, 600px"
-           alt="Dog walking"
-           fetchpriority="high"
-         />
+              src="image/dog-walking-optimized.webp"
+              alt="Dog walking"
+              width="600"
+              height="900"
+              loading="eager"
+              fetchpriority="high"
+            />
+
 
           <h4 data-i18n="svc_walk_title">Dog Walking</h4>
           <p data-i18n="svc_walk_text">Daily, weekly, or on-demand walks with GPS check-in and photo updates.</p>
@@ -178,14 +170,13 @@
          </article>
         <article class="card">
           <img 
-             src="image/dog-car-optimized.webp"
-             srcset="
-               image/dog-car-optimized-400.webp 400w,
-               image/dog-car-optimized.webp 800w
-             "
-             sizes="(max-width: 600px) 100vw, 600px"
-             alt="Dog enjoying the ride"
-           />
+            src="image/dog-car-optimized.webp"
+            alt="Dog enjoying the ride"
+            width="600"
+            height="400"
+            loading="lazy"
+          />
+
 
           <h4 data-i18n="svc_vet_title">Vet Accompany</h4>
           <p data-i18n="svc_vet_text">We accompany your pet to the vet, manage queues, and keep you updated.</p>
