--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
   <!-- App icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="/image/pawzy-favicon-32.png">
   <link rel="icon" type="image/png" sizes="192x192" href="/image/pawzy-favicon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/image/pawzy-apple-180.png">
+  <link rel="apple-touch-startup-image" href="/image/pawzy-apple-180.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
 
   <meta property="og:description" content="Complete pet care at your doorstep!" />
   <meta property="og:type" content="website" />
