--- a/dog-walking.html
+++ b/dog-walking.html
@@ -35,7 +35,7 @@
 
       <!-- Card 1: GPS -->
       <article class="pwz-card pwz-reveal">
-        <div class="pwz-card-icon">📍</div>
+        <!-- <div class="pwz-card-icon">📍</div> -->
         <h2>Real-Time GPS Tracking</h2>
         <p>
           At Pawzy, your pet’s safety and your peace of mind come first. That’s why we have introduced
@@ -59,7 +59,7 @@
 
       <!-- Card 2: Poop Picker / Swachh Bharat -->
       <article class="pwz-card pwz-reveal pwz-delay-1">
-        <div class="pwz-card-icon">🧼🇮🇳</div>
+        <!-- <div class="pwz-card-icon">🧼🇮🇳</div> -->
         <h2>Poop Picker Facility</h2>
         <p>
           At Pawzy, we believe responsible pet care goes beyond walking — it extends to keeping our surroundings
@@ -82,7 +82,7 @@
 
       <!-- Card 3: Customised Walks -->
       <article class="pwz-card pwz-reveal pwz-delay-2">
-        <div class="pwz-card-icon">🚶‍♂️🐕</div>
+        <!-- <div class="pwz-card-icon">🚶‍♂️🐕</div> -->
         <h2>Customised, Structured Walks</h2>
         <p>
           Every walk includes structured leash guidance, sniff-breaks, hydration, and plenty of positive attention
